pass engine event handler to engine run method, update examples

--- a/examples/worms/index.html
+++ b/examples/worms/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Real-time worms</title>
-        <link rel="stylesheet" type="text/css" href="assets/main.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.21/paper-full.min.js"></script>
-        <script type="text/javascript" src="assets/centrifuge.min.js"></script>
-        <script type="text/javascript" src="assets/main.js"></script>
+        <script type="text/javascript" src="centrifuge.min.js"></script>
+        <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
 		<canvas resize="true" id="canvas"></canvas>
