recover away field

--- a/examples/chat_json/index.html
+++ b/examples/chat_json/index.html
@@ -7,8 +7,8 @@
             input[type="text"] { width: 300px; }
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script type="text/javascript" src="jquery.min.js"></script>
-        <script type="text/javascript" src="http://localhost:2000/centrifuge.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script type="text/javascript" src="centrifuge.min.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             var tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -92,7 +92,6 @@
 
                 function handleSubscribeError(err) {
                     drawText('Error subscribing on channel ' + err.channel);
-                    console.log("subscription failed", err);
                 }
 
                 function handleMessage(message) {
@@ -129,9 +128,9 @@
                 $('#form').submit(function(event) {
                     event.preventDefault();
                     sub.publish({"input": input.val()}).then(function() {
-                        console.log('message accepted by server');
+                        // console.log('message accepted by server');
                     }, function(err) {
-                        console.log('error publishing message', err);
+                        // console.log('error publishing message', err);
                     });
                     input.val('');
                 });
