add possibility to return custom client error from broker subscribe method

--- a/examples/chat_json/index.html
+++ b/examples/chat_json/index.html
@@ -102,7 +102,7 @@
                 }
 
                 function handleSubscribeError(err) {
-                    drawText('Error subscribing on channel ' + err.channel);
+                    drawText('Error subscribing on channel ' + err.channel + ': ' + err.message);
                 }
 
                 function handleMessage(message) {
