--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -33,8 +33,12 @@
                 var input = $("#input");
                 var container = $('#messages');
 
-                var centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket');
-                // var centrifuge = new Centrifuge('http://localhost:8000/connection/sockjs');
+                // var centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket');
+                var centrifuge = new Centrifuge('http://localhost:8000/connection/sockjs', {
+                    sockjsTransports: [
+                        "xhr-polling"
+                    ]
+                });
 
                 centrifuge.setConnectData({"user-agent": navigator.userAgent});
 
