use separate client protocol package (#78)

--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -99,7 +99,7 @@
                     var rpcRequest = {"method": "getCurrentYear"}
 
                     centrifuge.rpc(rpcRequest).then(function(data){
-                        drawText(JSON.stringify(data));
+                        drawText("RPC response data: " + JSON.stringify(data));
                     }, function(err) {
                         drawText("RPC error: " + JSON.stringify(err));
                     });
