--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -50,7 +50,7 @@
 
                 centrifuge.on('message', function(data) {
                     drawText('Message: ' + JSON.stringify(data));
-                    // echo data back to server.
+                    // Echo data back to server.
                     centrifuge.send(data);
                 });
 
@@ -64,6 +64,14 @@
 
                 centrifuge.on('leave', function(ctx) {
                     drawText('Server-side leave from channel ' + ctx.channel + ": " + JSON.stringify(ctx.info));
+                });
+
+                centrifuge.on('subscribe', function(ctx) {
+                    drawText('Subscribe to server-side channel ' + ctx.channel);
+                });
+
+                centrifuge.on('unsubscribe', function(ctx) {
+                    drawText('Unsubscribe from server-side channel ' + ctx.channel);
                 });
 
                 centrifuge.on('disconnect', function(ctx){
