--- a/_examples/chat_protobuf/index.html
+++ b/_examples/chat_protobuf/index.html
@@ -32,10 +32,32 @@
                     input.attr("disabled", false);
                 });
 
+                centrifuge.on('publish', function(ctx) {
+                    var str = new TextDecoder("utf-8").decode(ctx.data);
+                    data = JSON.parse(str);
+                    drawText('Server-side publication from channel ' + ctx.channel + ": " + JSON.stringify(data));
+                });
+
+                centrifuge.on('join', function(ctx) {
+                    drawText('Server-side join from channel ' + ctx.channel + ": " + JSON.stringify(ctx.info));
+                });
+
+                centrifuge.on('leave', function(ctx) {
+                    drawText('Server-side leave from channel ' + ctx.channel + ": " + JSON.stringify(ctx.info));
+                });
+
+                centrifuge.on('subscribe', function(ctx) {
+                    drawText('Subscribe to server-side channel ' + ctx.channel + ', ' + ctx.isResubscribe + ', ' + ctx.recovered);
+                });
+
+                centrifuge.on('unsubscribe', function(ctx) {
+                    drawText('Unsubscribe from server-side channel ' + ctx.channel);
+                });
+
                 centrifuge.on('message', function(data) {
                     var str = new TextDecoder("utf-8").decode(data);
                     drawText(str);
-                    // echo data back to server with 'ack' prefix.
+                    // Echo data back to server with 'ack' prefix.
                     var echoData = new TextEncoder("utf-8").encode("ack " + str);
                     centrifuge.send(echoData);
                 });
@@ -87,9 +109,9 @@
 
                     centrifuge.rpc(binary).then(function(result){
                         var str = new TextDecoder("utf-8").decode(result.data);
-                        drawText(str);
+                        drawText("RPC response data: " + str);
                     }, function(err) {
-                        drawText(JSON.stringify(err));
+                        drawText("RPC error: " + JSON.stringify(err));
                     });
                 }
 
@@ -98,7 +120,6 @@
                 }
 
                 function handleMessage(message) {
-                    console.log("new message received", message);
                     var str = new TextDecoder("utf-8").decode(message.data);
                     data = JSON.parse(str);
                     var clientID;
