--- a/_examples/custom_ws_nhooyr/index.html
+++ b/_examples/custom_ws_nhooyr/index.html
@@ -7,10 +7,9 @@
             input[type="text"] { width: 300px; }
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding-indexes.js"></script>
-        <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding.js"></script>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script type="text/javascript" src="https://rawgit.com/centrifugal/centrifuge-js/master/dist/centrifuge.protobuf.min.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+        <script type="text/javascript" src="https://rawgit.com/centrifugal/centrifuge-js/master/dist/centrifuge.min.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             var tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -19,23 +18,39 @@
 
             var channel = "chat:index";
 
+            function getParam(name, url) {
+                if (!url) url = window.location.href;
+                name = name.replace(/[\[\]]/g, '\\$&');
+                var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+                    results = regex.exec(url);
+                if (!results) return null;
+                if (!results[2]) return '';
+                return decodeURIComponent(results[2].replace(/\+/g, ' '));
+            }
+
             $(function() {
 
                 var input = $("#input");
                 var container = $('#messages');
 
-                var centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket?format=protobuf');
+                var centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket');
+
+                centrifuge.setConnectData({"user-agent": navigator.userAgent});
 
                 // bind listeners on centrifuge object instance events.
                 centrifuge.on('connect', function(ctx){
-                    drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport);
+                    drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport + ' with data: ' + JSON.stringify(ctx.data));
                     input.attr("disabled", false);
                 });
 
+                centrifuge.on('message', function(data) {
+                    drawText('Message: ' + JSON.stringify(data));
+                    // Echo data back to server.
+                    centrifuge.send(data);
+                });
+
                 centrifuge.on('publish', function(ctx) {
-                    var str = new TextDecoder("utf-8").decode(ctx.data);
-                    data = JSON.parse(str);
-                    drawText('Server-side publication from channel ' + ctx.channel + ": " + JSON.stringify(data));
+                    drawText('Server-side publication from channel ' + ctx.channel + ": " + JSON.stringify(ctx.data));
                 });
 
                 centrifuge.on('join', function(ctx) {
@@ -47,19 +62,11 @@
                 });
 
                 centrifuge.on('subscribe', function(ctx) {
-                    drawText('Subscribe to server-side channel ' + ctx.channel + ', ' + ctx.isResubscribe + ', ' + ctx.recovered);
+                    drawText('Subscribe to server-side channel ' + ctx.channel);
                 });
 
                 centrifuge.on('unsubscribe', function(ctx) {
                     drawText('Unsubscribe from server-side channel ' + ctx.channel);
-                });
-
-                centrifuge.on('message', function(data) {
-                    var str = new TextDecoder("utf-8").decode(data);
-                    drawText(str);
-                    // Echo data back to server with 'ack' prefix.
-                    var echoData = new TextEncoder("utf-8").encode("ack " + str);
-                    centrifuge.send(echoData);
                 });
 
                 centrifuge.on('disconnect', function(ctx){
@@ -74,10 +81,9 @@
                         for (var key in result.presence){
                             count++;
                         }
-                        drawText('Now in this room: ' + count + ' clients');
+                        drawText('Presence: now in this room – ' + count + ' clients');
                     }, function(err) {
-                        console.log("presence error", err);
-                        drawText("Presence error");
+                        drawText("Presence error: " + JSON.stringify(err));
                     });
                 }
 
@@ -99,17 +105,16 @@
                 centrifuge.connect();
 
                 function handleSubscribe(ctx) {
-                    drawText('Subscribed on channel ' + ctx.channel);
+                    drawText('Subscribed on channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ')');
                     if (ctx.isResubscribe) {
                         showPresence(sub);
                     }
 
+                    // This can be whatever JSON you want.
                     var rpcRequest = {"method": "getCurrentYear"}
-                    var binary = new TextEncoder("utf-8").encode(JSON.stringify(rpcRequest)); 
 
-                    centrifuge.rpc(binary).then(function(result){
-                        var str = new TextDecoder("utf-8").decode(result.data);
-                        drawText("RPC response data: " + str);
+                    centrifuge.rpc(rpcRequest).then(function(data){
+                        drawText("RPC response data: " + JSON.stringify(data));
                     }, function(err) {
                         drawText("RPC error: " + JSON.stringify(err));
                     });
@@ -120,25 +125,23 @@
                 }
 
                 function handleMessage(message) {
-                    var str = new TextDecoder("utf-8").decode(message.data);
-                    data = JSON.parse(str);
                     var clientID;
                     if (message.info){
                         clientID = message.info.client;
                     } else {
                         clientID = null;
                     }
-                    var inputText = data["input"].toString();
+                    var inputText = message.data["input"].toString();
                     var text = safeTagsReplace(inputText) + ' <span class="muted">from ' + clientID + '</span>';
                     drawText(text);
                 }
 
                 function handleJoin(message) {
-                    drawText('Someone joined channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
+                    drawText('Client joined channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
                 }
 
                 function handleLeave(message) {
-                    drawText('Someone left channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
+                    drawText('Client left channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
                 }
 
                 function handleUnsubscribe(sub) {
@@ -151,16 +154,37 @@
 
                 $('#form').submit(function(event) {
                     event.preventDefault();
-                    var data = {"input": input.val()};
-                    var binaryData = new TextEncoder("utf-8").encode(JSON.stringify(data)); 
-                    sub.publish(binaryData).then(function() {
-                        console.log('message accepted by server');
+                    sub.publish({"input": input.val()}).then(function() {
+                        // console.log('message accepted by server');
                     }, function(err) {
-                        drawText("Publish error: " + err.code + ' ' + err.message);
-                        console.log('error publishing message', err);
+                        // console.log('error publishing message', err);
                     });
                     input.val('');
                 });
+
+                if (getParam("disconnect") == "1") {
+                    function reconnect() {
+                        setTimeout(function() {
+                            centrifuge.disconnect();
+                            setTimeout(function(){
+                                reconnect();
+                            }, 11000);
+                        }, 4000);
+                    }
+                    reconnect();
+                }
+
+                if (getParam("publish") == "1") {
+                    var publishInterval = parseInt(getParam("publishInterval")) || 1000;
+                    var counter = 0
+                    setInterval(function(){
+                        sub.publish({"input": counter.toString()}).then(function() {
+                        }, function(err) {
+                            drawText("Publish error: " + JSON.stringify(err));
+                        });
+                        counter++;
+                    }, publishInterval);
+                }
             });
         </script>
     </head>
