memory streams sequence ttl, optimize expirations

--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -67,7 +67,7 @@
                 });
 
                 centrifuge.on('subscribe', function(ctx) {
-                    drawText('Subscribe to server-side channel ' + ctx.channel);
+                    drawText('Subscribe to server-side channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ')');
                 });
 
                 centrifuge.on('unsubscribe', function(ctx) {
